--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
-.div-1{
-    height: 200px;
-    width: 300px;
+.div{
+    height: 1200px;
+    width: 1200px;
     background-color: #b99ccf;
 }
 
-@media screen and (max-width: 520px) {
+@media screen and (max-width: 1200px) {
     body{
         background-color: red;
     }
